src/pages/Main/Main.css
.token-container{
    width: 70%;
    height: 60%;
    margin: auto;
    position: relative;
    top: 10%;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(29, 30, 34, 0.8);
    border-radius: 20px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    z-index: 1;
    margin-top: 150px;
}

/* Media query for responsiveness */
@media (max-width: 768px) {
    .container {
        width: 90%;
        height: auto;
        top: 5%;
        bottom: 5%;
        flex-direction: column;
        align-items: center;
    }
}

@media (max-width: 576px) {
    .container {
        width: 95%;
    }
}

.token-entry-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh; /* Adjust the height as needed */
}


.token-entry {
    border: 1px solid #ea385a;
    padding: 20px;
    margin: 5px;
    color: whitesmoke;
    border-radius: 10px;
    text-align: center;
    box-shadow: 0 0 10px rgba(0, 123, 255, 0.1);
}

.token-label {
    font-weight: bold;
    color: #b62b44;
}

.token-info {
    margin-right: 5px;
}

.token-action {
    display: block;
    margin-top: 15px;
}

.token-link {
    text-decoration: none;
    color: #ececec;
    background-color: #ea385a;
    padding: 10px 20px;
    border-radius: 5px;
    font-weight: bold;
    transition: background-color 0.3s ease;

}

.token-link:hover {
    background-color: #b62b44;
}

